# S6-Hybrid-Cryptosystem

./: Cargo.toml
s6_hcs_client/: bun.lockb  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
s6_hcs_client/src/: App.vue  main.ts
s6_hcs_client/src-tauri/: Cargo.toml  tauri.conf.json
s6_hcs_client/src-tauri/src/: helper.rs  main.rs
s6_hcs_lib_crypto/: Cargo.toml
s6_hcs_lib_crypto/src/: crypto.rs
s6_hcs_lib_crypto/src/crypto/: asymmetric_algs.rs  padding.rs  prime_tests.rs  symmetric_algs.rs
s6_hcs_lib_crypto/src/crypto/asymmetric_algs/: math.rs  xtr.rs  xtr_wrapper.rs
s6_hcs_lib_crypto/src/crypto/asymmetric_algs/math/: gfp2_element.rs  gfp2_traces.rs
s6_hcs_lib_crypto/src/crypto/padding/: base.rs  pkcs7.rs
s6_hcs_lib_crypto/src/crypto/symmetric_algs/: deal.rs  deal_modes.rs  des.rs
s6_hcs_lib_transfer/: Cargo.toml
s6_hcs_lib_transfer/src/: lib.rs
s6_hcs_server/: .gitignore  Cargo.toml
s6_hcs_server/src/: file_manager.rs  main.rs
