[package]
name = "s6_hcs_client"
version = "1.1.0"
description = "Client for encrypted file exchange."
authors = ["NKMekhta"]
license = ""
repository = ""
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
websocket = "0.27.0"
s6_hcs_lib_crypto = { path = "../../s6_hcs_lib_crypto" }
s6_hcs_lib_transfer = { path = "../../s6_hcs_lib_transfer" }


[features]
custom-protocol = ["tauri/custom-protocol"]
